## hand-tuned to remove ns/archive
## Dune file: /Users/gar/mina/snarky/h_list/dune

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
)

## Global Options
load(
    "//bzl:config.bzl",
    "GLOBAL_CLI_OPTS",
    "MODULE_OPTS",
)

## Repo Options
load("//bzl/snarky:config.bzl", "SNARKY_OPTS")

PKG_OPTS = GLOBAL_CLI_OPTS + SNARKY_OPTS + []

LIB_1_OPTS = []

LIB_1_MODULE_OPTS = PKG_OPTS + LIB_1_OPTS + MODULE_OPTS

ocaml_module(
    name = "h_list",
    src = "h_list.ml",
    opts = LIB_1_MODULE_OPTS,
    visibility = ["//visibility:public"],
)
