load(
    "@obazl_rules_ocaml//ocaml:build.bzl",
    "ocaml_archive",
    "ocaml_executable",
    "ocaml_interface",
    "ocaml_module",
    "ocaml_ns_module",
    "ppx_archive",
    "ppx_executable",
    "ppx_module",
    "ppx_ns_module",
)

COMMON_OPTS = select({
    "//bzl/config:enable_verbose": ["-verbose"],
    "//conditions:default": [],
}) + ["-thread"]

LINK_OPTS = select({
    "//bzl/config:always_link": ["-linkall"],
    "//conditions:default": [],
}) + []

EXEC_OPTS = COMMON_OPTS + LINK_OPTS + []

IMPL_OPTS = COMMON_OPTS + LINK_OPTS + ["-thread"]

INTF_OPTS = COMMON_OPTS + LINK_OPTS + []

ARCHIVE_OPTS = COMMON_OPTS + LINK_OPTS + []

COMMON_DEPS = []

PPX_EXEC_OPTS = COMMON_OPTS + LINK_OPTS + []

PPX_IMPL_OPTS = COMMON_OPTS + LINK_OPTS + []

PPX_INTF_OPTS = COMMON_OPTS + LINK_OPTS + []

PPX_NS_OPTS = COMMON_OPTS + LINK_OPTS + []

PPX_ARCHIVE_OPTS = COMMON_OPTS + LINK_OPTS + []

INTERVAL_UNION_NS = "Interval_union"

## (ppx_jane ppx_deriving.eq bisect_ppx -conditional)
PPX3_F180089C = "@//ppx/exe:ppx3_f180089c-83e6-5015-b4a7-74a66ad417a0"

ocaml_archive(
    name = "interval_union",
    opts = INTF_OPTS,
    visibility = ["//visibility:public"],
    deps = [
        # do not sort (buildifier)
        ":interval_union_ns_module",
        ":interval_union.cm_",
    ],
)

ocaml_ns_module(
    name = "interval_union_ns_module",
    ns = INTERVAL_UNION_NS,
    submodules = [
        # do not sort (buildifier)
        "interval_union.ml",
    ],
)

ocaml_interface(
    name = "interval_union.cmi",
    intf = "interval_union.mli",
    ns_module = ":interval_union_ns_module",
    opts = INTF_OPTS,
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:core"
    ],
)

ocaml_module(
    name = "interval_union.cm_",
    cmi = ":interval_union.cmi",
    impl = "interval_union.ml",
    ns_module = ":interval_union_ns_module",
    opts = IMPL_OPTS,
    ppx_bin = PPX3_F180089C,
    ppx_bin_opts = [
        # do not sort (buildifier)
        "-cookie",
        "library-name=\"interval_union\"",
        "-corrected-suffix",
        ".ppx-corrected",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:core"
    ],
)
