(executable
 (name meja)
 (libraries core_kernel snarky meja.lib)
 (flags :standard -warn-error -39-21)
 (preprocess (pps ppxlib.metaquot ppx_jane))
 (modules meja))

(executable
 (name cmi_to_meja)
 (libraries core_kernel ocaml-compiler-libs.common meja.lib)
 (flags :standard -warn-error -39-21)
 (preprocess (pps ppxlib.metaquot ppx_jane))
 (modules cmi_to_meja))
