load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag", "string_setting")

package(default_visibility = ["//visibility:public"])

alias(
    name   = "snarky",
    actual = "//src:snarky"
)

#############################################
####     REPO-SCOPED CONFIG SETTINGS     ####
#############################################
## OCaml
bool_flag( name = "always-link", build_setting_default = False )
config_setting( name = "enable_always_link", flag_values = { ":always-link": "True" })
config_setting( name = "disable_always_link", flag_values = { ":always-link": "False" })

bool_flag( name = "debug", build_setting_default = False)
config_setting( name = "enable_debug", flag_values = { ":debug": "True" })
config_setting( name = "disable_debug", flag_values = { ":debug": "False" })

## FIXME: rename to "tooling"?
bool_flag( name = "emit-cmt", build_setting_default = True )
config_setting( name = "enable_emit_cmt", flag_values = { ":emit-cmt": "True" })
config_setting( name = "disable_emit_cmt", flag_values = { ":emit-cmt": "False" })

bool_flag( name = "threads", build_setting_default = True )
config_setting( name = "enable_threads", flag_values = { ":threads": "True" })
config_setting( name = "disable_threads", flag_values = { ":threads": "False" })

bool_flag( name = "verbose", build_setting_default = False)
config_setting( name = "enable_verbose", flag_values = { ":verbose": "True" })
config_setting( name = "disable_verbose", flag_values = { ":verbose": "False" })

#### control ppx -dump-ast flag
string_flag( name = "ppx_output_format", build_setting_default = "binary", values = ["binary", "text"])
config_setting( name = "enable_ppx_output_format_text", flag_values = { ":ppx_output_format": "text" })
config_setting( name = "enable_ppx_output_format_binary", flag_values = { ":ppx_output_format": "binary" })
