load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_module",
    "ocaml_ns_module",
)

## Global Options
load(
    "//bzl:config.bzl",
    "ARCHIVE_OPTS",
    "GLOBAL_CLI_OPTS",
    "MODULE_OPTS",
    "NS_MODULE_OPTS",
)

## Repo Options
load("//bzl/snarky:config.bzl", "SNARKY_OPTS")

PKG_OPTS = GLOBAL_CLI_OPTS + SNARKY_OPTS + []
LIB_1_OPTS = []
LIB_1_ARCHIVE_OPTS = PKG_OPTS + LIB_1_OPTS + ARCHIVE_OPTS
LIB_1_MODULE_OPTS = PKG_OPTS + LIB_1_OPTS + MODULE_OPTS
LIB_1_NS_MODULE_OPTS = PKG_OPTS + LIB_1_OPTS + NS_MODULE_OPTS
LIB_1_DEPS = ["@opam//pkg:core_kernel"]

PPX_1 = "//bzl/ppx:ppx[ppx_jane][ppx_deriving.eq]"

PPX_1_ARGS = [
    # do not sort (buildifier)
    "-inline-test-lib",
    "snarky_signature",
]

################################################################
## LIB 1
################################################################
ocaml_archive(
    name = "snarky_signature",
    opts = LIB_1_ARCHIVE_OPTS,
    visibility = ["//visibility:public"],
    deps = LIB_1_DEPS + [
        ":Snarky_signature_ns",
        ":Signature",
    ],
)

ocaml_ns_module(
    name = "Snarky_signature_ns",
    ns = "snarky_signature",
    opts = LIB_1_NS_MODULE_OPTS,
    submodules = ["signature.ml"]
)

ocaml_module(
    name = "Signature",
    src = "signature.ml",
    ns_module = ":Snarky_signature_ns",
    opts = LIB_1_MODULE_OPTS,
    ppx = PPX_1,
    ppx_args = PPX_1_ARGS,
    deps = LIB_1_DEPS
)
